--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,8 +1,9 @@
 extends ../templates/layout.pug
 block wrapper
-	div.content Это контент!
-	div.content Это контент!
+	div.content
 
+	button.button Кнопка
+	
 	-i = 0
 	while i<10
 		+breadcrumbs({
